[gd_scene format=3 uid="uid://cb4txjam154bm"]

[ext_resource type="Script" uid="uid://bg2k0chtjremw" path="res://Scripts/Minigame/snow_clear_minigame.gd" id="1_minigame"]
[ext_resource type="FontFile" uid="uid://cky2yrbm1fxdy" path="res://Assets/Fonts/PIXELADE.TTF" id="2_font"]
[ext_resource type="Texture2D" uid="uid://b78gsr1vnk6pu" path="res://Assets/Sprites/Backgrounds/MainScreen_bg.png" id="2_m4owu"]
[ext_resource type="Texture2D" uid="uid://bgbksnxbim56f" path="res://Assets/Sprites/ChatGPT Image Nov 11, 2025, 01_41_27 PM.png" id="3_184go"]
[ext_resource type="FontFile" uid="uid://cxqub0sfewm4v" path="res://addons/font_auto_size_labels/demo/Anta-Regular.ttf" id="5_184go"]

[sub_resource type="LabelSettings" id="LabelSettings_wcqdt"]
font = ExtResource("5_184go")
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_1tl5j"]
font = ExtResource("5_184go")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_6jj3f"]
font = ExtResource("5_184go")
font_size = 20
font_color = Color(1, 0.8980392, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1rfgr"]
font = ExtResource("5_184go")
font_size = 20
font_color = Color(1, 0.89411765, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2q1ec"]
font = ExtResource("5_184go")
font_size = 20
font_color = Color(1, 0.8901961, 0, 1)

[node name="SnowClearMinigame" type="Control" unique_id=1336601900]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_minigame")
particle_spawn_interval = 0.1
background_images = Array[Texture2D]([ExtResource("2_m4owu"), ExtResource("3_184go"), ExtResource("3_184go")])

[node name="BackgroundImage" type="TextureRect" parent="." unique_id=1473851491]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 6

[node name="SnowContainer" type="Control" parent="." unique_id=83814854]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ParticleContainer" type="Control" parent="." unique_id=680633950]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PreGamePanel" type="Control" parent="." unique_id=987389172]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelBackground" type="ColorRect" parent="PreGamePanel" unique_id=1379642578]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="PreGamePanel" unique_id=689199250]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 25

[node name="TitleLabel" type="Label" parent="PreGamePanel/VBoxContainer" unique_id=550749225]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "Clear the Snow!"
label_settings = SubResource("LabelSettings_wcqdt")
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="PreGamePanel/VBoxContainer" unique_id=589996420]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "The building is buried under snow!"
label_settings = SubResource("LabelSettings_1tl5j")
horizontal_alignment = 1
autowrap_mode = 2

[node name="TapToStartLabel" type="Label" parent="PreGamePanel/VBoxContainer" unique_id=2070975000]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Tap to start!"
label_settings = SubResource("LabelSettings_6jj3f")
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="." unique_id=1519156597]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 42
text = "Time: 20"
label_settings = SubResource("LabelSettings_1rfgr")
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="." unique_id=326956627]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "Swipe over the snow to clear it!"
label_settings = SubResource("LabelSettings_2q1ec")
horizontal_alignment = 1

[node name="TapArea" type="Control" parent="." unique_id=1850434868]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
